compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__bitwise_access_error_validation.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected Integer but found Exponent value: 1e5
  ┌─ <internal>:2:7
  │
2 │     a.1e5;   // exponent illegal
  │       ^^^ Unexpected token: expected Integer but found Exponent value: 1e5

error[E007]: Unexpected token: expected expression but found %
  ┌─ <internal>:3:7
  │
3 │     b.%f6;   // f is no valid direct access modifier
  │       ^ Unexpected token: expected expression but found %

error[E007]: Unexpected token: expected KeywordSemicolon but found '%f6'
  ┌─ <internal>:3:7
  │
3 │     b.%f6;   // f is no valid direct access modifier
  │       ^^^ Unexpected token: expected KeywordSemicolon but found '%f6'
