compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__for_with_missing_semicolon_in_body.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token [KeywordSemicolon, KeywordColon]
  ┌─ <internal>:4:13
  │
4 │             END_FOR
  │             ^^^^^^^ Missing expected Token [KeywordSemicolon, KeywordColon]

error[E007]: Unexpected token: expected KeywordSemicolon but found 'END_FOR'
  ┌─ <internal>:4:13
  │
4 │             END_FOR
  │             ^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_FOR'
