compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__incomplete_statement_in_parantheses_recovery_test-2.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: pou.statements
---
[
    BinaryExpression {
        operator: Plus,
        left: ParenExpression {
            expression: BinaryExpression {
                operator: Minus,
                left: BinaryExpression {
                    operator: Plus,
                    left: LiteralInteger {
                        value: 1,
                    },
                    right: LiteralInteger {
                        value: 2,
                    },
                },
                right: EmptyStatement,
            },
        },
        right: LiteralInteger {
            value: 3,
        },
    },
    ReferenceExpr {
        kind: Member(
            Identifier {
                name: "x",
            },
        ),
        base: None,
    },
]
