compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__incomplete_statement_test.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected expression but found ;
  ┌─ <internal>:3:20
  │
3 │             1 + 2 +;
  │                    ^ Unexpected token: expected expression but found ;
